--- a/src/com/yahiab/app2d/kikim_2d.fxml
+++ b/src/com/yahiab/app2d/kikim_2d.fxml
@@ -119,16 +119,12 @@
                                                           layoutX="16.0" layoutY="110.0" prefHeight="50.0"
                                                           prefWidth="206.0" visible="false">
                                                     <children>
-                                                        <GridPane hgap="10.0" layoutX="16.0" layoutY="89.0"
-                                                                  prefHeight="50.0" prefWidth="106.0" vgap="10.0">
+                                                        <GridPane layoutX="16.0" layoutY="89.0" prefHeight="50.0"
+                                                                  prefWidth="106.0">
                                                             <children>
-                                                                <Text layoutX="12.0" layoutY="140.0"
-                                                                      strokeType="OUTSIDE" strokeWidth="0.0"
-                                                                      styleClass="normal-label" text="Hauteur :"
-                                                                      GridPane.halignment="CENTER"
-                                                                      GridPane.rowIndex="1"/>
                                                                 <TextField fx:id="hauteur" layoutX="94.0"
-                                                                           layoutY="127.0" maxWidth="44.0"
+                                                                           layoutY="127.0"
+                                                                           maxWidth="1.7976931348623157E308"
                                                                            minHeight="20.0" minWidth="30.0"
                                                                            prefHeight="20.0" prefWidth="44.0"
                                                                            GridPane.columnIndex="1"
@@ -137,16 +133,24 @@
                                                                 <Text layoutY="111.0" strokeType="OUTSIDE"
                                                                       strokeWidth="0.0" styleClass="normal-label"
                                                                       text="Largeur :" wrappingWidth="66.775390625"
-                                                                      GridPane.halignment="CENTER"/>
+                                                                      GridPane.halignment="CENTER"
+                                                                      GridPane.rowIndex="1"/>
                                                                 <TextField fx:id="largeur" layoutX="94.0" layoutY="89.0"
-                                                                           maxWidth="40.0" minHeight="20.0"
-                                                                           minWidth="30.0" prefHeight="20.0"
-                                                                           prefWidth="40.0" GridPane.columnIndex="1"
+                                                                           maxWidth="1.7976931348623157E308"
+                                                                           minHeight="20.0" minWidth="30.0"
+                                                                           prefHeight="20.0" prefWidth="40.0"
+                                                                           GridPane.columnIndex="1"
                                                                            GridPane.halignment="CENTER"/>
+                                                                <Text strokeType="OUTSIDE" strokeWidth="0.0"
+                                                                      styleClass="normal-label" text="Hauteur :"
+                                                                      wrappingWidth="66.775390625"
+                                                                      GridPane.halignment="CENTER"/>
                                                             </children>
                                                             <columnConstraints>
                                                                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
-                                                                <ColumnConstraints hgrow="SOMETIMES" minWidth="30.0"/>
+                                                                <ColumnConstraints hgrow="SOMETIMES"
+                                                                                   maxWidth="1.7976931348623157E308"
+                                                                                   minWidth="30.0"/>
                                                             </columnConstraints>
                                                             <rowConstraints>
                                                                 <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
@@ -168,14 +172,15 @@
                                                     </children>
                                                     <columnConstraints>
                                                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
-                                                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
+                                                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="50.0"
+                                                                           minWidth="30.0"/>
                                                     </columnConstraints>
                                                     <rowConstraints>
                                                         <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
                                                     </rowConstraints>
                                                 </GridPane>
                                                 <GridPane fx:id="rayon" disable="true" hgap="5.0" layoutX="16.0"
-                                                          layoutY="122.0" prefHeight="31.0" prefWidth="199.0"
+                                                          layoutY="122.0" prefHeight="31.0" prefWidth="206.0"
                                                           visible="false">
                                                     <children>
                                                         <Label layoutX="16.0" layoutY="106.0" styleClass="normal-label"
@@ -198,7 +203,8 @@
                                                     <columnConstraints>
                                                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
                                                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
-                                                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
+                                                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="50.0"
+                                                                           minWidth="10.0"/>
                                                     </columnConstraints>
                                                     <rowConstraints>
                                                         <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
@@ -210,14 +216,14 @@
                                                       prefHeight="15.0" prefWidth="200.0"
                                                       style="-fx-background-color: rgb(19,190,220);"/>
                                                 <ImageView fx:id="pas_element_2D" fitHeight="126.0" fitWidth="127.0"
-                                                           layoutX="40.0" layoutY="36.0" pickOnBounds="true"
+                                                           layoutX="56.0" layoutY="37.0" pickOnBounds="true"
                                                            preserveRatio="true">
                                                     <image>
                                                         <Image url="@res/2d/no_shape_2d.png"/>
                                                     </image>
                                                 </ImageView>
                                                 <GridPane fx:id="affichage_cote" disable="true" layoutY="80.0"
-                                                          prefHeight="31.0" prefWidth="191.0" translateY="20.0"
+                                                          prefHeight="31.0" prefWidth="222.0" translateY="20.0"
                                                           visible="false">
                                                     <columnConstraints>
                                                         <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES"
@@ -226,7 +232,8 @@
                                                         <ColumnConstraints hgrow="SOMETIMES" maxWidth="129.0"
                                                                            minWidth="10.0" prefWidth="58.0"/>
                                                         <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES"
-                                                                           minWidth="10.0" prefWidth="100.0"/>
+                                                                           maxWidth="50.0" minWidth="10.0"
+                                                                           prefWidth="100.0"/>
                                                     </columnConstraints>
                                                     <rowConstraints>
                                                         <RowConstraints minHeight="10.0" prefHeight="30.0"
