final build 22h 51min

--- a/src/com/yahiab/graphix/view/_3d/viewer.css
+++ b/src/com/yahiab/graphix/view/_3d/viewer.css
@@ -287,3 +287,9 @@
     -fx-font-weight: bold;
     -fx-text-fill: #000000;
 }
+
+.videos-title {
+    -fx-font-size: 24px;
+    -fx-font-weight: bold;
+    -fx-text-fill: #0055aa;
+}
