--- a/src/com/yahiab/graphix/view/pdf/PDFView.fxml
+++ b/src/com/yahiab/graphix/view/pdf/PDFView.fxml
@@ -3,9 +3,11 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.Font?>
+<?import java.lang.*?>
 <AnchorPane xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="700.0"
-            minWidth="1024.0" prefHeight="768.0" prefWidth="1024.0" xmlns="http://javafx.com/javafx/8.0.40"
-            fx:controller="com.yahiab.graphix.controller.pdf.PDFController">
+            minWidth="1024.0" prefHeight="768.0" prefWidth="1024.0" stylesheets="@../_3d/viewer.css"
+            xmlns="http://javafx.com/javafx/8.0.40" fx:controller="com.yahiab.graphix.controller.pdf.PDFController">
     <children>
         <GridPane layoutX="364.0" layoutY="279.0" AnchorPane.bottomAnchor="25.0" AnchorPane.leftAnchor="25.0"
                   AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="25.0">
@@ -27,7 +29,7 @@
                     </rowConstraints>
                     <children>
                         <ScrollPane fx:id="PDFScrollPane" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1"/>
-                        <GridPane>
+                        <GridPane vgap="5.0">
                             <columnConstraints>
                                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
                             </columnConstraints>
@@ -36,7 +38,15 @@
                             </rowConstraints>
                         </GridPane>
                         <Button fx:id="btnPrint" mnemonicParsing="false" onAction="#printPDF" text="Imprimer"
-                                GridPane.halignment="CENTER" GridPane.valignment="CENTER"/>
+                                GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+                            <font>
+                                <Font name="System Bold" size="15.0"/>
+                            </font>
+                            <styleClass>
+                                <String fx:value="topmenubutton"/>
+                                <String fx:value="scalableonhover"/>
+                            </styleClass>
+                        </Button>
                     </children>
                     <GridPane.margin>
                         <Insets left="75.0" right="25.0"/>
@@ -44,47 +54,107 @@
                 </GridPane>
                 <GridPane>
                     <columnConstraints>
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
                     </columnConstraints>
                     <rowConstraints>
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                        <RowConstraints maxHeight="75.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                        <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
                     </rowConstraints>
                     <children>
-                        <Button fx:id="btnCube" maxHeight="125.0" maxWidth="125.0" minHeight="125.0" minWidth="125.0"
-                                mnemonicParsing="false" onAction="#loadCubePDF" prefHeight="125.0" prefWidth="125.0"
-                                text="Cube" GridPane.halignment="CENTER" GridPane.valignment="CENTER"/>
-                        <Button fx:id="btnBox" maxHeight="125.0" maxWidth="125.0" minHeight="125.0" minWidth="125.0"
-                                mnemonicParsing="false" onAction="#loadBoxPDF" prefHeight="125.0" prefWidth="125.0"
-                                text="parallélépipède" GridPane.columnIndex="1" GridPane.halignment="CENTER"
-                                GridPane.valignment="CENTER"/>
-                        <Button fx:id="btnCylinder" maxHeight="125.0" maxWidth="125.0" minHeight="125.0"
-                                minWidth="125.0" mnemonicParsing="false" onAction="#loadCylinderPDF" prefHeight="125.0"
-                                prefWidth="125.0" text="Cylindre" GridPane.halignment="CENTER" GridPane.rowIndex="1"
-                                GridPane.valignment="CENTER"/>
-                        <Button fx:id="btnCone" maxHeight="125.0" maxWidth="125.0" minHeight="125.0" minWidth="125.0"
-                                mnemonicParsing="false" onAction="#loadConePDF" prefHeight="125.0" prefWidth="125.0"
-                                text="Cone" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1"
-                                GridPane.valignment="CENTER"/>
-                        <Button fx:id="btnPyramid" maxHeight="125.0" maxWidth="125.0" minHeight="125.0" minWidth="125.0"
-                                mnemonicParsing="false" onAction="#loadPyramidPDF" prefHeight="125.0" prefWidth="125.0"
-                                text="Pyramide" GridPane.halignment="CENTER" GridPane.rowIndex="2"
-                                GridPane.valignment="CENTER"/>
-                        <Button fx:id="btnPrism" maxHeight="125.0" maxWidth="125.0" minHeight="125.0" minWidth="125.0"
-                                mnemonicParsing="false" onAction="#loadPrismPDF" prefHeight="125.0" prefWidth="125.0"
-                                text="Prisme" GridPane.columnIndex="1" GridPane.halignment="CENTER"
-                                GridPane.rowIndex="2" GridPane.valignment="CENTER"/>
-                        <Button fx:id="btnTetrahedron" maxHeight="125.0" maxWidth="125.0" minHeight="125.0"
-                                minWidth="125.0" mnemonicParsing="false" onAction="#loadTetrahedronPDF"
-                                prefHeight="125.0" prefWidth="125.0" text="Tetraèdre" GridPane.halignment="CENTER"
-                                GridPane.rowIndex="3" GridPane.valignment="CENTER"/>
-                        <Button fx:id="btnOctahedron" maxHeight="125.0" maxWidth="125.0" minHeight="125.0"
-                                minWidth="125.0" mnemonicParsing="false" onAction="#loadOctahedronPDF"
-                                prefHeight="125.0" prefWidth="125.0" text="octaèdre" GridPane.columnIndex="1"
-                                GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER"/>
+                        <GridPane GridPane.rowIndex="1">
+                            <columnConstraints>
+                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+                            </columnConstraints>
+                            <rowConstraints>
+                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                            </rowConstraints>
+                            <children>
+                                <Button fx:id="btnCube" maxHeight="125.0" maxWidth="125.0" minHeight="125.0"
+                                        minWidth="125.0" mnemonicParsing="false" onAction="#loadCubePDF"
+                                        prefHeight="125.0" prefWidth="125.0" text="Cube" GridPane.halignment="CENTER"
+                                        GridPane.valignment="CENTER">
+                                    <styleClass>
+                                        <String fx:value="shapesbuttons"/>
+                                        <String fx:value="scalableonhover"/>
+                                    </styleClass>
+                                </Button>
+                                <Button fx:id="btnBox" maxHeight="125.0" maxWidth="125.0" minHeight="125.0"
+                                        minWidth="125.0" mnemonicParsing="false" onAction="#loadBoxPDF"
+                                        prefHeight="125.0" prefWidth="125.0" text="parallélépipède"
+                                        GridPane.columnIndex="1" GridPane.halignment="CENTER"
+                                        GridPane.valignment="CENTER">
+                                    <styleClass>
+                                        <String fx:value="shapesbuttons"/>
+                                        <String fx:value="scalableonhover"/>
+                                    </styleClass>
+                                </Button>
+                                <Button fx:id="btnCylinder" maxHeight="125.0" maxWidth="125.0" minHeight="125.0"
+                                        minWidth="125.0" mnemonicParsing="false" onAction="#loadCylinderPDF"
+                                        prefHeight="125.0" prefWidth="125.0" text="Cylindre"
+                                        GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+                                    <styleClass>
+                                        <String fx:value="shapesbuttons"/>
+                                        <String fx:value="scalableonhover"/>
+                                    </styleClass>
+                                </Button>
+                                <Button fx:id="btnCone" maxHeight="125.0" maxWidth="125.0" minHeight="125.0"
+                                        minWidth="125.0" mnemonicParsing="false" onAction="#loadConePDF"
+                                        prefHeight="125.0" prefWidth="125.0" text="Cone" GridPane.columnIndex="1"
+                                        GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+                                    <styleClass>
+                                        <String fx:value="shapesbuttons"/>
+                                        <String fx:value="scalableonhover"/>
+                                    </styleClass>
+                                </Button>
+                                <Button fx:id="btnPyramid" maxHeight="125.0" maxWidth="125.0" minHeight="125.0"
+                                        minWidth="125.0" mnemonicParsing="false" onAction="#loadPyramidPDF"
+                                        prefHeight="125.0" prefWidth="125.0" text="Pyramide"
+                                        GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
+                                    <styleClass>
+                                        <String fx:value="shapesbuttons"/>
+                                        <String fx:value="scalableonhover"/>
+                                    </styleClass>
+                                </Button>
+                                <Button fx:id="btnPrism" maxHeight="125.0" maxWidth="125.0" minHeight="125.0"
+                                        minWidth="125.0" mnemonicParsing="false" onAction="#loadPrismPDF"
+                                        prefHeight="125.0" prefWidth="125.0" text="Prisme" GridPane.columnIndex="1"
+                                        GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
+                                    <styleClass>
+                                        <String fx:value="shapesbuttons"/>
+                                        <String fx:value="scalableonhover"/>
+                                    </styleClass>
+                                </Button>
+                                <Button fx:id="btnTetrahedron" maxHeight="125.0" maxWidth="125.0" minHeight="125.0"
+                                        minWidth="125.0" mnemonicParsing="false" onAction="#loadTetrahedronPDF"
+                                        prefHeight="125.0" prefWidth="125.0" text="Tetraèdre"
+                                        GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER">
+                                    <styleClass>
+                                        <String fx:value="shapesbuttons"/>
+                                        <String fx:value="scalableonhover"/>
+                                    </styleClass>
+                                </Button>
+                                <Button fx:id="btnOctahedron" maxHeight="125.0" maxWidth="125.0" minHeight="125.0"
+                                        minWidth="125.0" mnemonicParsing="false" onAction="#loadOctahedronPDF"
+                                        prefHeight="125.0" prefWidth="125.0" text="octaèdre" GridPane.columnIndex="1"
+                                        GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER">
+                                    <styleClass>
+                                        <String fx:value="shapesbuttons"/>
+                                        <String fx:value="scalableonhover"/>
+                                    </styleClass>
+                                </Button>
+                            </children>
+                        </GridPane>
+                        <Label text="Les patrons des différentes formes 3D" GridPane.halignment="CENTER"
+                               GridPane.valignment="CENTER">
+                            <styleClass>
+                                <String fx:value="important-title"/>
+                                <String fx:value="scalableonhover"/>
+                            </styleClass>
+                        </Label>
                     </children>
                 </GridPane>
             </children>
