--- a/src/com/yahiab/graphix/view/videos/VideosView.fxml
+++ b/src/com/yahiab/graphix/view/videos/VideosView.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
+<?import java.lang.*?>
 <AnchorPane xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="700.0"
             minWidth="1024.0" prefHeight="700.0" prefWidth="1024.0" stylesheets="@../_3d/viewer.css"
             xmlns="http://javafx.com/javafx/8.0.40"
@@ -32,32 +33,47 @@
                </rowConstraints>
                <children>
                   <Button minHeight="30.0" minWidth="220.0" mnemonicParsing="false" onAction="#playVideo1"
-                          styleClass="topmenubutton" text="Les solides géométriques (1)" GridPane.halignment="CENTER"
+                          text="Les solides géométriques (1)" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+                     <font>
+                        <Font name="System Bold" size="12.0"/>
+                     </font>
+                     <styleClass>
+                        <String fx:value="topmenubutton"/>
+                        <String fx:value="scalableonhover"/>
+                     </styleClass>
+                  </Button>
+                  <Button minHeight="30.0" minWidth="220.0" mnemonicParsing="false" onAction="#playVideo2"
+                          text="Les solides géométriques (2)" GridPane.halignment="CENTER" GridPane.rowIndex="1"
                           GridPane.valignment="CENTER">
                      <font>
                         <Font name="System Bold" size="12.0"/>
                      </font>
-                  </Button>
-                  <Button minHeight="30.0" minWidth="220.0" mnemonicParsing="false" onAction="#playVideo2"
-                          styleClass="topmenubutton" text="Les solides géométriques (2)" GridPane.halignment="CENTER"
-                          GridPane.rowIndex="1" GridPane.valignment="CENTER">
-                     <font>
-                        <Font name="System Bold" size="12.0"/>
-                     </font>
+                     <styleClass>
+                        <String fx:value="topmenubutton"/>
+                        <String fx:value="scalableonhover"/>
+                     </styleClass>
                   </Button>
                   <Button minHeight="30.0" minWidth="220.0" mnemonicParsing="false" onAction="#playVideo3"
-                          styleClass="topmenubutton" text="Les formes géométriques planes (1)"
-                          GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
+                          text="Les formes géométriques planes (1)" GridPane.halignment="CENTER" GridPane.rowIndex="2"
+                          GridPane.valignment="CENTER">
                      <font>
                         <Font name="System Bold" size="12.0"/>
                      </font>
+                     <styleClass>
+                        <String fx:value="topmenubutton"/>
+                        <String fx:value="scalableonhover"/>
+                     </styleClass>
                   </Button>
                   <Button minHeight="30.0" minWidth="220.0" mnemonicParsing="false" onAction="#playVideo4"
-                          styleClass="topmenubutton" text="Les formes géométriques planes (2)"
-                          GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER">
+                          text="Les formes géométriques planes (2)" GridPane.halignment="CENTER" GridPane.rowIndex="3"
+                          GridPane.valignment="CENTER">
                      <font>
                         <Font name="System Bold" size="12.0"/>
                      </font>
+                     <styleClass>
+                        <String fx:value="topmenubutton"/>
+                        <String fx:value="scalableonhover"/>
+                     </styleClass>
                   </Button>
                </children>
                <GridPane.margin>
@@ -66,12 +82,28 @@
             </GridPane>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <children>
-                  <Pane fx:id="videoPane" layoutX="43.0" layoutY="55.0" minHeight="400.0" minWidth="600.0"
-                        prefHeight="400.0" prefWidth="600.0"/>
+                  <GridPane layoutX="43.0" layoutY="55.0" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="500.0"
+                            AnchorPane.rightAnchor="500.0" AnchorPane.topAnchor="50.0">
+                     <columnConstraints>
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
+                     </columnConstraints>
+                     <rowConstraints>
+                        <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
+                     </rowConstraints>
+                     <children>
+                        <Pane fx:id="videoPane" minHeight="400.0" minWidth="600.0" prefHeight="400.0" prefWidth="600.0"
+                              GridPane.halignment="CENTER" GridPane.valignment="CENTER"/>
+                     </children>
+                  </GridPane>
                </children>
             </AnchorPane>
-            <Label styleClass="videos-title" text="Quelques vidéos éducatifs pour bien comprendre la géométrie 2D et 3D"
-                   GridPane.columnSpan="2147483647" GridPane.halignment="CENTER" GridPane.valignment="CENTER"/>
+            <Label text="Quelques vidéos éducatifs pour bien comprendre la géométrie 3D"
+                   GridPane.columnSpan="2147483647" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+               <styleClass>
+                  <String fx:value="videos-title"/>
+                  <String fx:value="scalableonhover"/>
+               </styleClass>
+            </Label>
          </children>
       </GridPane>
    </children>
